--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="Praktikumsteil3/LocUtil/src"/>
+	<classpathentry kind="lib" path="C:/Users/haefn/git/Wifi/LibFuerDiagram/jcommon-1.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haefn/git/Wifi/LibFuerDiagram/jfreechart-1.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
