--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="Praktikumsteil3/LocUtil/src"/>
 	<classpathentry kind="lib" path="LibFuerDiagram/jcommon-1.0.0.jar"/>
 	<classpathentry kind="lib" path="LibFuerDiagram/jfreechart-1.0.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
